--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
     id 'io.spring.dependency-management' version '1.1.0'
 }
 
-group = 'com.zerobase.hseungho'
+group = 'com.myfin'
 version = '0.0.1-SNAPSHOT'
 
 java {
@@ -21,25 +21,37 @@ repositories {
     mavenCentral()
 }
 
-dependencies {
-    // web
-    implementation 'org.springframework.boot:spring-boot-starter-web'
+subprojects {
 
-    // database
-    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
+    apply plugin: 'java'
+    apply plugin: 'org.springframework.boot'
+    apply plugin: 'io.spring.dependency-management'
 
-    // util
-    compileOnly 'org.projectlombok:lombok'
-    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
-    annotationProcessor 'org.projectlombok:lombok'
+    repositories {
+        mavenCentral()
+    }
 
-    // test
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    dependencies {
+        implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+
+        compileOnly 'org.projectlombok:lombok'
+        annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
+        annotationProcessor 'org.projectlombok:lombok'
+
+        testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    }
 }
+
+dependencies {}
 
 tasks.named('test') {
     useJUnitPlatform()
+}
+
+project(':module-api') {
+    dependencies {
+        compileOnly project(':module-core')
+    }
 }
 
 bootJar{enabled=false}
