--- a/module-api/build.gradle
+++ b/module-api/build.gradle
@@ -18,6 +18,7 @@ repositories {
 dependencies {
     implementation project(':module-core')
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
 }
 
 tasks.named('test') {
