--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,7 @@ subprojects {
     }
 
     dependencies {
+        implementation 'org.springframework.boot:spring-boot-starter'
         implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 
         compileOnly 'org.projectlombok:lombok'
