Add feature of send messsage using NurigoAPI

--- a/module-adapter/build.gradle
+++ b/module-adapter/build.gradle
@@ -15,7 +15,9 @@ repositories {
     mavenCentral()
 }
 
-dependencies {}
+dependencies {
+    implementation 'net.nurigo:sdk:4.3.0'
+}
 
 tasks.named('test') {
     useJUnitPlatform()
