Add service feature of send verify message

--- a/build.gradle
+++ b/build.gradle
@@ -52,6 +52,7 @@ tasks.named('test') {
 project(':module-api') {
     dependencies {
         compileOnly project(':module-core')
+        compileOnly project(':module-adapter')
     }
 }
 
