--- a/module-api/build.gradle
+++ b/module-api/build.gradle
@@ -17,6 +17,8 @@ repositories {
 
 dependencies {
     implementation project(':module-core')
+    implementation project(':module-adapter')
+
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
 }
