--- a/module-api/build.gradle
+++ b/module-api/build.gradle
@@ -18,6 +18,7 @@ repositories {
 dependencies {
     implementation project(':module-core')
     implementation project(':module-adapter')
+    implementation project(':module-cache')
 
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
