Add SignUp Feature (#8)
* Add core module

* Delete core module test class

* Delete root module src directory

* Chore create user entity class

* Add attributes of user class

* Chore create SexType enum class

* Add column annotation to each field of user class

* Create UserRepository interface

* Chore modify spring property file extension (.properties -> .yml)

* Chore rename property file (application -> application-core)

* Add app properties of core module

* Chore some modify for gradle

* Create BaseEntity class

* Add attributes of base entity (createdAt, updatedAt) for auditing

* Add util class and method for getting cur time of seoul

* Chore add comments of field

* Chore modify core properties

* Chore create UserAddressVO class

* Add attr. of UserAddressVO

* Rename core module directory (core -> module-core)

* Add API module

* Add annotatition to root class for spring bean scan

* Modify EntityScan annot (com.myfin.core -> com.myfin.core.entity)

* Add import core profiles to api profile

* Chore modify sex cols definition property

* Modify build gradle file

* Chore create UserController

* Add check id api endpoint of UserController

* Chore create CheckIdAvailable DTO class

* Chore create UserCheckService

* Add method for check user id available into UserCheckService interface

* Chore create UserCheckServiceImpl

* Add JPA query for existbyuserid into UserRepository

* Add function for check user id available

* Chore add comments of checkuserid available funtion

* Add test for check user id available api logic

* Chore add server port property

* Chore create api-secret.yml file for secret properties

* Add spring validation dependency for valid somethings

* Add @NotBlank for CheckUserIdAvailabe request data

* Add ATopServiceComponent for valid util method or something fucntion using other services

* Move SeoulDateTime package (util.date -> util)

* 

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,9 @@ build/
 !**/src/main/**/build/
 !**/src/test/**/build/
 
+api-secret.yml
+security-secret.yml
+
 ### STS ###
 .apt_generated
 .classpath
