--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,6 @@
 rootProject.name = 'my-fin'
+include 'module-core'
+include 'module-api'
+include 'module-adapter'
+include 'module-cache'
+include 'module-security'
