--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,10 @@
 plugins {
     id 'java'
-    id 'org.springframework.boot' version '3.1.1'
+    id 'org.springframework.boot' version '3.0.8'
     id 'io.spring.dependency-management' version '1.1.0'
 }
 
-group = 'com.zerobase.hseungho'
+group = 'com.myfin'
 version = '0.0.1-SNAPSHOT'
 
 java {
@@ -21,23 +21,54 @@ repositories {
     mavenCentral()
 }
 
-dependencies {
-    // web
-    implementation 'org.springframework.boot:spring-boot-starter-web'
+subprojects {
 
-    // database
-    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
+    apply plugin: 'java'
+    apply plugin: 'org.springframework.boot'
+    apply plugin: 'io.spring.dependency-management'
 
-    // util
-    compileOnly 'org.projectlombok:lombok'
-    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
-    annotationProcessor 'org.projectlombok:lombok'
+    repositories {
+        mavenCentral()
+    }
 
-    // test
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    dependencies {
+        implementation 'org.springframework.boot:spring-boot-starter'
+        implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+
+        compileOnly 'org.projectlombok:lombok'
+        annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
+        annotationProcessor 'org.projectlombok:lombok'
+
+        testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    }
 }
+
+dependencies {}
 
 tasks.named('test') {
     useJUnitPlatform()
 }
+
+project(':module-api') {
+    dependencies {
+        compileOnly project(':module-core')
+        compileOnly project(':module-adapter')
+        compileOnly project(':module-cache')
+        compileOnly project(':module-security')
+    }
+}
+
+project(':module-adapter') {
+    dependencies {
+        compileOnly project(':module-core')
+    }
+}
+
+project(':module-security') {
+    dependencies {
+        compileOnly project(':module-core')
+    }
+}
+
+bootJar{enabled=false}
+jar{enabled=false}
