--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,7 @@ subprojects {
 
     dependencies {
         implementation 'org.springframework.boot:spring-boot-starter'
+        implementation 'org.springframework.boot:spring-boot-starter-security'
         implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 
         compileOnly 'org.projectlombok:lombok'
