--- a/module-security/build.gradle
+++ b/module-security/build.gradle
@@ -20,6 +20,7 @@ dependencies {
 
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'io.jsonwebtoken:jjwt:0.9.1'
+    implementation 'javax.xml.bind:jaxb-api:2.3.1'
 
     testImplementation 'org.springframework.security:spring-security-test'
 }
