--- a/module-security/build.gradle
+++ b/module-security/build.gradle
@@ -18,7 +18,10 @@ repositories {
 dependencies {
     implementation project(':module-core')
 
-    implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'io.jsonwebtoken:jjwt:0.9.1'
+    implementation 'javax.xml.bind:jaxb-api:2.3.1'
+
     testImplementation 'org.springframework.security:spring-security-test'
 }
 
