Change encryption on data storage from EncryptService to EncryptConverter
Signed-off-by: hseungho <hsh47607@naver.com>

--- a/build.gradle
+++ b/build.gradle
@@ -65,9 +65,9 @@ project(':module-adapter') {
     }
 }
 
-project(':module-security') {
+project(':module-core') {
     dependencies {
-        compileOnly project(':module-core')
+        compileOnly project(':module-security')
     }
 }
 
