--- a/module-security/build.gradle
+++ b/module-security/build.gradle
@@ -16,7 +16,7 @@ repositories {
 }
 
 dependencies {
-    implementation project(':module-core')
+//    implementation project(':module-core')
 
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'io.jsonwebtoken:jjwt:0.9.1'
