Rename Module (module-cache -> module-redis)
Signed-off-by: hseungho <hsh47607@naver.com>

--- a/build.gradle
+++ b/build.gradle
@@ -54,7 +54,7 @@ project(':module-api') {
     dependencies {
         compileOnly project(':module-core')
         compileOnly project(':module-adapter')
-        compileOnly project(':module-cache')
+        compileOnly project(':module-redis')
         compileOnly project(':module-security')
     }
 }
