--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'java'
-    id 'org.springframework.boot' version '3.0.8'
+    id 'org.springframework.boot' version '3.0.6'
     id 'io.spring.dependency-management' version '1.1.0'
 }
 
@@ -35,6 +35,7 @@ subprojects {
         implementation 'org.springframework.boot:spring-boot-starter'
         implementation 'org.springframework.boot:spring-boot-starter-security'
         implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+        implementation 'org.springframework.boot:spring-boot-starter-aop'
 
         compileOnly 'org.projectlombok:lombok'
         annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
@@ -54,8 +55,14 @@ project(':module-api') {
     dependencies {
         compileOnly project(':module-core')
         compileOnly project(':module-adapter')
-        compileOnly project(':module-cache')
+        compileOnly project(':module-redis')
         compileOnly project(':module-security')
+    }
+}
+
+project(':module-redis') {
+    dependencies {
+        compileOnly project(':module-core')
     }
 }
 
