--- a/module-api/build.gradle
+++ b/module-api/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'java'
-    id 'org.springframework.boot' version '3.0.8'
+    id 'org.springframework.boot' version '3.0.6'
     id 'io.spring.dependency-management' version '1.1.0'
 }
 
@@ -18,12 +18,11 @@ repositories {
 dependencies {
     implementation project(':module-core')
     implementation project(':module-adapter')
-    implementation project(':module-cache')
+    implementation project(':module-redis')
     implementation project(':module-security')
 
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
-    implementation 'org.springframework.boot:spring-boot-starter-aop'
 }
 
 tasks.named('test') {
